--- a/header/header.html
+++ b/header/header.html
@@ -32,6 +32,10 @@
 </div>
 
 <div id="headerBox" class="" ><!-- data-set="set" -->
+    <div class="box" data-block="1" data-title="header12">
+        <div class="header12"><span class="title">中国·福建武夷新区管理委员会</span></div>
+    </div>
+
     <div class="box" data-title="header11" data-block="1">
         <div class="header11">
             <div class="header11-left header11Title"><div class="header11-leftInner">热<br>点</div></div>
@@ -67,11 +71,14 @@
         </script>
     </div>
 
-    <div class="box">
-        <div class="header09 clear">
-            <span class="h-title01">在线留言</span>
-            <div class="more float-r"><i class="iconfont icon-homebig"></i>你的位置：<a>网站首页</a> > <a>在线留言</a> </div>
+    <div class="box" data-title="header09" data-block="1">
+        <div style="width:75%">
+            <div class="header09 clear">
+                <span class="h-title01">在线留言</span>
+                <div class="more float-r"><i class="iconfont icon-homebig"></i>你的位置：<a>网站首页</a> > <a>在线留言</a> </div>
+            </div>
         </div>
+
     </div>
 
     <div class="box" data-title="header08" data-block="1">
