--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -31,11 +31,292 @@
 		</div>
 	</div>	
 	<div id="navbarBox" class="" ><!-- data-set="set" -->
+
+		<div class="box" data-title="navbar-line09" >
+			<div class="navBar_wrapper09 ">
+				<div class="navbar-line09 container-1200 font-title clear ">
+					<div class="navbar-block ">
+						<div class="nbi"><a class="navLink">首页</a></div>
+					</div>
+					<div class="navbar-block ">
+						<div class="nbi">
+							<a class="navLink">产品服务</a>
+
+							<div id="" class="naver-wrapper ">
+								<div class="naver-wrapper-left">
+									<div class="imgBox"><img src="/img/naver_pics01.png"></div>
+								</div>
+								<div class="naver-wrapper-right">
+									<ul class="nwr-ul">
+									<li><span class="liInner">领导关怀</span></li>
+									<li><span class="liInner">新区要闻</span></li>
+									<li><span class="liInner">投资动态</span></li>
+									<li><span class="liInner">项目建设</span></li>
+									<li><span class="liInner">领导关怀</span></li>
+									<li><span class="liInner">新区要闻</span></li>
+									<li><span class="liInner">投资动态</span></li>
+									<li><span class="liInner">项目建设</span></li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="navbar-block"><div class="nbi"><a class="navLink">科研成绩</a></div>
+
+					</div>
+					<div class="navbar-block "><div class="nbi"><a class="navLink">服务与支持</a></div>
+
+					</div>
+
+					<div class="navbar-block"><div class="nbi"><a class="navLink">人力资源</a></div>
+
+					</div>
+					<div class="navbar-block">
+						<div class="nbi">
+							<a class="navLink">关于我们</a>
+							<div id="" class="naver-wrapper ">
+								<div class="naver-wrapper-left">
+									<div class="imgBox"><img src="/img/naver_pics01.png"></div>
+								</div>
+								<div class="naver-wrapper-right">
+									<ul class="nwr-ul">
+										<li><span class="liInner">领导关怀</span></li>
+										<li><span class="liInner">新区要闻</span></li>
+										<li><span class="liInner">投资动态</span></li>
+										<li><span class="liInner">项目建设</span></li>
+										<li><span class="liInner">领导关怀</span></li>
+										<li><span class="liInner">新区要闻</span></li>
+										<li><span class="liInner">投资动态</span></li>
+										<li><span class="liInner">项目建设</span></li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<script type="text/javascript">
+                +function navbarline09() {
+
+                    var navbar = {
+                        line:$(".navbar-line09"),
+
+                        ini : function(){
+                            var that = this;
+                            that.blockHover();
+                        },
+                        blockHover:function(){
+                            var that = this;
+                            var st = 180;
+                            var navBlocks = this.line.find('.navbar-block'),
+                                half = navBlocks.length/2;
+                            navBlocks.each(function(i,e){
+
+                                var naver_wrapper = $(this).find('.naver-wrapper');
+                                if(i+1<=half){naver_wrapper.addClass("position_left")}else{
+                                    naver_wrapper.addClass("position_right")
+                                }
+                                $(e).mouseenter(function () {
+                                    naver_wrapper.show();
+                                }).mouseleave(function () {
+                                    naver_wrapper.hide();
+                                });
+                            })
+                        },
+
+                    };
+                    navbar.ini();
+
+
+                }()
+
+			</script>
+		</div>
+		
+		<div class="box" data-title="navbar-line08" >
+
+			<div class="navbar-wrapper08 bg-green">
+				<div class="container-1000">
+
+					<div class="navbar-line08 clear white">
+						<div class="navbar-block">
+							<a class="navLink">首页</a>
+						</div>
+						<div class="navbar-block">
+
+							<a class="navLink">关于我们</a>
+							<ul class="naver_0">
+
+								<div class="nav_erc">
+									<div class="navBox01">
+										<div class="navBox01Pic float-l"><a ><img src="/img/naver_pics01.png"></a></div>
+										<div class="navBox01Link margin-l-168">
+											<div class="linkWrapper">
+												<div class="linkContent over-flow">
+
+													<li class="navLi nvali-l"><a>中心简介</a></li>
+													<li class="navLi nvali-r"><a>组织架构</a></li>
+													<li class="navLi nvali-l"><a>重点实验室介绍</a></li>
+													<li class="navLi nvali-r"><a>中心资质</a></li>
+													<li class="navLi nvali-l"><a>中心文化</a></li>
+													<li class="navLi nvali-r"><a>联系我们</a></li>
+
+												</div>
+											</div>
+										</div>
+									</div>
+
+								</div>
+
+							</ul>
+
+						</div>
+						<div class="navbar-block">
+
+							<a class="navLink">产品检测范围</a>
+							<ul class="naver_0">
+
+								<div class="nav_erc">
+									<div class="navBox01">
+										<div class="navBox01Pic float-l"><a ><img src="/img/naver_pics01.png"></a></div>
+										<div class="navBox01Link margin-l-168">
+											<div class="linkWrapper">
+												<div class="linkContent over-flow">
+
+													<li class="navLi nvali-l"><a>中心简介</a></li>
+													<li class="navLi nvali-r"><a>组织架构</a></li>
+													<li class="navLi nvali-l"><a>重点实验室介绍</a></li>
+													<li class="navLi nvali-r"><a>中心资质</a></li>
+													<li class="navLi nvali-l"><a>中心文化</a></li>
+													<li class="navLi nvali-r"><a>联系我们</a></li>
+
+												</div>
+											</div>
+										</div>
+									</div>
+
+								</div>
+
+							</ul>
+
+						</div>
+						<div class="navbar-block ">
+
+							<a class="navLink">服务支持</a>
+							<ul class="naver_0">
+
+								<div class="nav_erc">
+									<div class="navBox01">
+										<div class="navBox01Pic float-l"><a ><img src="/img/naver_pics01.png"></a></div>
+										<div class="navBox01Link margin-l-168">
+											<div class="linkWrapper">
+												<div class="linkContent over-flow">
+
+													<li class="navLi nvali-l"><a>中心简介</a></li>
+													<li class="navLi nvali-r"><a>组织架构</a></li>
+													<li class="navLi nvali-l"><a>重点实验室介绍</a></li>
+													<li class="navLi nvali-r"><a>中心资质</a></li>
+													<li class="navLi nvali-l"><a>中心文化</a></li>
+													<li class="navLi nvali-r"><a>联系我们</a></li>
+
+												</div>
+											</div>
+										</div>
+									</div>
+
+								</div>
+
+							</ul>
+
+						</div>
+						<div class="navbar-block">
+
+							<a class="navLink">资讯中心</a>
+							<ul class="naver_0">
+
+								<div class="nav_erc">
+									<div class="navBox01">
+										<div class="navBox01Pic float-l"><a ><img src="/img/naver_pics01.png"></a></div>
+										<div class="navBox01Link margin-l-168">
+											<div class="linkWrapper">
+												<div class="linkContent over-flow">
+
+													<li class="navLi nvali-l"><a>中心简介</a></li>
+													<li class="navLi nvali-r"><a>组织架构</a></li>
+													<li class="navLi nvali-l"><a>重点实验室介绍</a></li>
+													<li class="navLi nvali-r"><a>中心资质</a></li>
+													<li class="navLi nvali-l"><a>中心文化</a></li>
+													<li class="navLi nvali-r"><a>联系我们</a></li>
+
+												</div>
+											</div>
+										</div>
+									</div>
+
+								</div>
+
+							</ul>
+
+						</div>
+						<div class="navbar-block">
+
+							<a class="navLink">信息公开</a>
+							<ul class="naver_0">
+
+								<div class="nav_erc">
+									<div class="navBox01">
+										<div class="navBox01Pic float-l"><a ><img src="/img/naver_pics01.png"></a></div>
+										<div class="navBox01Link margin-l-168">
+											<div class="linkWrapper">
+												<div class="linkContent over-flow">
+
+													<li class="navLi nvali-l"><a>中心简介</a></li>
+													<li class="navLi nvali-r"><a>组织架构</a></li>
+													<li class="navLi nvali-l"><a>重点实验室介绍</a></li>
+													<li class="navLi nvali-r"><a>中心资质</a></li>
+													<li class="navLi nvali-l"><a>中心文化</a></li>
+													<li class="navLi nvali-r"><a>联系我们</a></li>
+
+												</div>
+											</div>
+										</div>
+									</div>
+
+
+								</div>
+
+							</ul>
+
+						</div>
+					</div>
+
+				</div>
+				<script>
+
+					+function navbarline08() {
+                        var st = 180;
+                        $('.navbar-line08 .navbar-block').mouseenter(function () {
+                            $(this).find('ul').stop(false, true).slideDown(st);
+                        }).mouseleave(function () {
+                            $(this).find('ul').stop(false, true).slideUp(st);
+                        });
+                    }()
+
+
+				</script>
+			</div>
+
+		</div>
+
 		<div class="box" data-title="navbar-line07" >
 			<div class="navBar_wrapper07 ">
-				<div class="navbar-line07 container1200 font-title clear white">
-					<div class="navbar-block "><a class="navLink">首页</a></div>
-					<div class="navbar-block "><a class="navLink">产品服务</a>
+				<div class="navbar-line07 container-1200 font-title clear white">
+					<div class="navbar-block ">
+						<div class="nbi"><a class="navLink">首页</a></div>
+					</div>
+					<div class="navbar-block ">
+						<div class="nbi">
+						<a class="navLink">产品服务</a>
 
 						<div id="" class="naver_wrapper ">
 							<div class="naver_wrapper_inner">
@@ -62,19 +343,22 @@
 
 							</div>
 						</div>
+						</div>
 					</div>
-					<div class="navbar-block"><a class="navLink">科研成绩</a>
+					<div class="navbar-block"><div class="nbi"><a class="navLink">科研成绩</a></div>
 
 					</div>
-					<div class="navbar-block "><a class="navLink">服务与支持</a>
+					<div class="navbar-block "><div class="nbi"><a class="navLink">服务与支持</a></div>
 
 					</div>
 
-					<div class="navbar-block"><a class="navLink">人力资源</a>
+					<div class="navbar-block"><div class="nbi"><a class="navLink">人力资源</a></div>
 
 					</div>
-					<div class="navbar-block"><a class="navLink">关于我们</a>
-						<div id="" class="naver_wrapper">
+					<div class="navbar-block">
+						<div class="nbi">
+							<a class="navLink">关于我们</a>
+							<div id="" class="naver_wrapper">
 
 							<div class="naver_wrapper_inner">
 
@@ -99,21 +383,19 @@
 							</div>
 
 						</div>
-
-
-
+						</div>
 					</div>
 				</div>
 			</div>
 			<script type="text/javascript">
                 +function navbarline07() {
-					/*导航栏 start*/
+
                     var navbar = {
                         line:$(".navbar-line07"),
 
                         ini : function(){
                             var that = this;
-                            that.line.find(".navbar-block .naver_01").width(that.line.find(".navbar-block").first().width());
+
 
                             that.blockHover();
                             that.itemHover();
@@ -161,13 +443,12 @@
                             var pics = wrapper.find(".naver_inner");
                             pics.eq(i).css({display:"inline-block"}).siblings(".naver_inner").hide();
                         }
-
                     };
-                    $(function () {
-                        navbar.ini();
-                    })
+						navbar.ini();
+						$(navbar.line).ready(function(){
 
-					/*导航栏 end*/
+                            navbar.line.find(".navbar-block .naver_01").width(navbar.line.find(".navLink").first().width());
+						})
 
                 }()
 
