--- a/tab/tab.html
+++ b/tab/tab.html
@@ -34,6 +34,41 @@
 	</div>	
 	<div id="tabBox" class="" ><!-- data-set="set" -->
 
+
+		<div class="box" data-block="3" data-plugin="superslide" data-p-casename="tab10" data-type="tab" data-title="tab10">
+			<!-- 咨询中心 start -->
+			<div class="i_center clear">
+				<div class="m_inner center shadow01">
+
+					<div class="tab10-wrapper ">
+						<div class="hd">
+							<ul class="tab10 clear">
+								<li><a href="#" class="font-normal">肯特新闻</a></li>
+								<li><a href="#" class="font-normal">行业新闻</a></li>
+							</ul>
+						</div>
+						<div class="bd">
+							<div class="news-list01">
+								1
+							</div>
+							<div class="news-list01">
+								2
+							</div>
+						</div>
+
+					</div>
+				</div>
+
+			</div>
+			<!-- 咨询中心 end -->
+			<script type="text/javascript">
+                function tab10(){
+					/*咨询中心tab切换*/
+                    jQuery(".tab10-wrapper").slide();
+                }
+			</script>
+
+		</div>
 		<div class="box " data-block="1" data-plugin="superslide" data-p-caseName="tab09" data-type="tab" data-title="tab09">
 			<div id="tab09" class="slideTxtBox tab09 riBlock marginBottom" >
 				<div class="hd">
@@ -373,27 +408,10 @@
 				</div>
 				<div class="bd">
 					<ul class="switch">
-						<li>
-							<div class="s-general">
-								<p class="stb-text">第六届中国国际服务外包交易博览会...</p>
-								<p>8月29日下午，中国国际投资促进会与杭州市商务委员会在北京中关村软件园联合召开了第六...<a class="button green">[查看详情]</a></p>
-							</div>
-							<div class="news-list01">
-								<ul>
-									<li><a><span class="date">09-04</span><span class="text">2014年度上海市服务贸易发展专项资金申 </span>  </a></li>
-									<li><a><span class="date">09-04</span><span class="text">2014年度上海市服务贸易发展专项资金申 </span>  </a></li>
-									<li><a><span class="date">09-04</span><span class="text">2014年度上海市服务贸易发展专项资金申 </span>  </a></li>
-									<li><a><span class="date">09-04</span><span class="text">2014年度上海市服务贸易发展专项资金申 </span>  </a></li>
-									<li><a><span class="date">09-04</span><span class="text">2014年度上海市服务贸易发展专项资金申 </span>  </a></li>
-									<li><a><span class="date">09-04</span><span class="text">2014年度上海市服务贸易发展专项资金申 </span>  </a></li>
-
-								</ul>
-							</div>
-						</li>
+						<li>1</li>
 					</ul>
 					<ul class="switch">
-						<li>
-							<span class="date">2011-11-11</span><a href="http://www.SuperSlide2.com" target="_blank">中国打破了世界软件巨头规则</a></li>
+						<li>2</li>
 					</ul>
 				</div>
 			</div>
