--- a/common/common.html
+++ b/common/common.html
@@ -17,6 +17,8 @@
         <link rel="stylesheet" type="text/css" href="/css/slider.css">
         <link rel="stylesheet" type="text/css" href="/css/content.css">
         <link rel="stylesheet" type="text/css" href="/css/list.css">
+        <link rel="stylesheet" type="text/css" href="/css/map.css">
+
         <link rel="stylesheet" type="text/css" href="/css/picText.css">
         <link rel="stylesheet" type="text/css" href="/css/tab.css">
         <link rel="stylesheet" type="text/css" href="/css/iconGroup.css">
@@ -28,7 +30,7 @@
         <link rel="stylesheet" type="text/css" href="/css/special.css">
         <link rel="stylesheet" type="text/css" href="/css/touch.css">
         <link rel="stylesheet" type="text/css" href="/css/pagination.css">
-        <link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_zoqlptz0yue4s4i.css">
+        <link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_dsjotcz6ba7fd2t9.css">
         <link rel="stylesheet" type="text/css" href="/css/sprite.css">
 
 
