--- a/picText/picText.html
+++ b/picText/picText.html
@@ -33,6 +33,183 @@
     </div>
 </div>
 <div id="picTextBox" class="" ><!-- data-set="set" -->
+    <div class="box" data-block="2" data-type="picText7">
+        <ul class="picText7 list">
+
+            <li class="newsRow over-flow">
+                <div class="cl-pic float-l ">
+                    <img src="/img/n-pic.png">
+                </div>
+
+                <div class="cl-newsBox margin-l-200">
+
+                    <div class="cl-title">
+                        <a class="cl-p01 ellipsis">深化改革——上海检验检疫局扎实开展“两学一做”学习教育</a>
+
+                    </div>
+
+                    <p class="cl-text">
+                        两学一做学习教育开展以来，上海检验检疫局认真贯彻中央、质检总局关于学习教育的部署，紧密结合实际，突出上海特色，做到思想跟进、学
+                    </p>
+                    <p class="clear"><span class="gray">201707-14</span><a class="more1 float-r">【详细】</a></p>
+                </div>
+            </li>
+            <li class="newsRow over-flow">
+                <div class="cl-pic float-l ">
+                    <img src="/img/n-pic.png">
+                </div>
+
+                <div class="cl-newsBox margin-l-200">
+
+                    <div class="cl-title">
+                        <a class="cl-p01 ellipsis">深化改革——上海检验检疫局扎实开展“两学一做”学习教育</a>
+
+                    </div>
+
+                    <p class="cl-text">
+                        两学一做学习教育开展以来，上海检验检疫局认真贯彻中央、质检总局关于学习教育的部署，紧密结合实际，突出上海特色，做到思想跟进、学
+                    </p>
+
+                </div>
+            </li>
+
+        </ul>
+
+    </div>
+
+    <div class="box" data-block="2" data-type="picText6">
+        <ul class="picText6">
+
+            <li class="newsRow over-flow">
+                <div class="cl-pic float-l ">
+                    <img src="/img/n-pic.png">
+                </div>
+                <div class="cl-newsBox margin-l-200">
+                    <div class="cl-title">
+                        <p class="cl-p01 ellipsis">学做并重 深化改革——上海检验检疫局扎实开展“两学一做”学习教育</p>
+                        <div class="cl-line"></div>
+                    </div>
+                    <p class="cl-text">
+                        两学一做学习教育开展以来，上海检验检疫局认真贯彻中央、质检总局关于学习教育的部署，紧密结合实际，突出上海特色，做到思想跟进、学
+                    </p>
+                    <p class="cl-btn">
+                        <span class="time">[2016-09-21]</span>
+                        <a class="button float-r cl-details  white">查看详情 》</a>
+                    </p>
+                </div>
+            </li>
+            <li class="newsRow over-flow">
+                <div class="cl-pic float-l ">
+                    <img src="/img/n-pic.png">
+                </div>
+                <div class="cl-newsBox margin-l-200">
+                    <div class="cl-title">
+                        <p class="cl-p01 ellipsis">学做并重 深化改革——上海检验检疫局扎实开展“两学一做”学习教育</p>
+                        <div class="cl-line"></div>
+                    </div>
+                    <p class="cl-text">
+                        两学一做学习教育开展以来，上海检验检疫局认真贯彻中央、质检总局关于学习教育的部署，紧密结合实际，突出上海特色，做到思想跟进、学
+                    </p>
+                    <p class="cl-btn">
+                        <span class="time">[2016-09-21]</span>
+                        <a class="button float-r cl-details  white">查看详情 》</a>
+                    </p>
+                </div>
+            </li>
+        </ul>
+
+    </div>
+
+    <div class="box" data-block="1" data-type="picText" data-title="picText5">
+        <ul class="picText5">
+            <li class="newsRow over-flow">
+                <div class="cl-pic float-l ">
+                    <img src="/img/naver_pics01.png">
+                </div>
+                <div class="cl-newsBox margin-l-200">
+                    <div class="cl-title">
+                        <span class="time float-r">[2016-09-21]</span>
+                        <p class="cl-p01 font-title ellipsis">学做并重 深化改革——上海检验检疫局扎实开展“两学一做”学习教育</p>
+                    </div>
+                    <p class="cl-text">
+                        1月8日，由深圳光泰产业计量工程研究院主办、福建省计量测试学会协办的”2016年度产业计量联盟/平台理事会年度工作及项目技术培
+                    </p>
+                    <p class="cl-btn">
+
+                        <a class="button float-l cl-details  kent_red">点击查看</a>
+                    </p>
+                </div>
+            </li>
+            <li class="newsRow over-flow">
+                <div class="cl-pic float-l ">
+                    <img src="/img/naver_pics01.png">
+                </div>
+                <div class="cl-newsBox margin-l-200">
+                    <div class="cl-title">
+                        <span class="time float-r">[2016-09-21]</span>
+                        <p class="cl-p01 font-title ellipsis">学做并重 深化改革——上海检验检疫局扎实开展“两学一做”学习教育</p>
+
+
+                    </div>
+                    <p class="cl-text">
+                        1月8日，由深圳光泰产业计量工程研究院主办、福建省计量测试学会协办的”2016年度产业计量联盟/平台理事会年度工作及项目技术培
+                    </p>
+                    <p class="cl-btn">
+
+                        <a class="button float-l cl-details  kent_red">点击查看</a>
+                    </p>
+                </div>
+            </li>
+        </ul>
+    </div>
+
+
+    <div class="box" data-block="1" data-type="picText" data-title="picText4">
+        <ul class="picText4">
+            <li class="newsRow over-flow ">
+
+                <div class="cl-pic float-l ">
+                    行业新闻
+                </div>
+
+                <div class="cl-newsBox margin-l-200">
+                    <div class="cl-title">
+                        <span class="time float-r">[2016-09-21]</span>
+                        <p class="cl-p01 font-title ellipsis ">省<span class="red">计量</span>所高速公路“动态汽车衡”检定工作顺利完成</p>
+
+
+                    </div>
+                    <p class="cl-text ">
+                        从今年年初起，省质监局<span class="red">计量</span>所测力室多名工程师，经过近4个多月加班加点的连续奋战，克服了气候、环境等多种不利因素，在5月15日
+                        从今年年初起，省质监局<span class="red">计量</span>所测力室多名工程师，经过近4个多月加班加点的连续奋战，克服了气候、环境等多种不利因素，在5月15日
+                        从今年年初起，省质监局<span class="red">计量</span>所测力室多名工程师，经过近4个多月加班加点的连续奋战，克服了气候、环境等多种不利因素，在5月15日
+                    </p>
+
+                </div>
+            </li>
+            <li class="newsRow over-flow ">
+
+                <div class="cl-pic float-l ">
+                    行业新闻
+                </div>
+
+                <div class="cl-newsBox margin-l-200">
+                    <div class="cl-title">
+                        <span class="time float-r">[2016-09-21]</span>
+                        <p class="cl-p01 font-title ellipsis ">省<span class="red">计量</span>所高速公路“动态汽车衡”检定工作顺利完成</p>
+
+
+                    </div>
+                    <p class="cl-text ">
+                        从今年年初起，省质监局<span class="red">计量</span>所测力室多名工程师，经过近4个多月加班加点的连续奋战，克服了气候、环境等多种不利因素，在5月15日
+                        从今年年初起，省质监局<span class="red">计量</span>所测力室多名工程师，经过近4个多月加班加点的连续奋战，克服了气候、环境等多种不利因素，在5月15日
+                        从今年年初起，省质监局<span class="red">计量</span>所测力室多名工程师，经过近4个多月加班加点的连续奋战，克服了气候、环境等多种不利因素，在5月15日
+                    </p>
+
+                </div>
+            </li>
+        </ul>
+    </div>
 
     <div class="box" data-block="1" data-title="picText3" data-type="picText" >
         <div id="picText3" class="picText3 productRow"></div>
