--- a/common/common.html
+++ b/common/common.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" type="text/css" href="/css/button.css">
         <link rel="stylesheet" type="text/css" href="/css/barHeader.css">
         <link rel="stylesheet" type="text/css" href="/css/footer.css">
+        <link rel="stylesheet" type="text/css" href="/css/form.css">
         <link rel="stylesheet" type="text/css" href="/css/header.css">
         <link rel="stylesheet" type="text/css" href="/css/input.css">
         <link rel="stylesheet" type="text/css" href="/css/mobile.css">
