--- a/iconGroup/iconGroup.html
+++ b/iconGroup/iconGroup.html
@@ -34,7 +34,94 @@
 	</div>	
 	<div id="iconGroupBox" class="" ><!-- data-set="set" -->
 
+		<div class="box "  data-title="iconGroup05" data-type="iconGroup">
+			<div class="iconGroup05">
+				<div id="webContainerBox" class="webContainerBox ">
+				<div id="webModuleContainer" class="webModuleContainer">
+					<div id='module306' class='form Handle template1010 formStyle31 moduleStyle2' >
+						<div class='formMiddle formMiddle306'>
 
+							<div class='middleCenter middleCenter306'>
+								<div class='formMiddleContent formMiddleContent306 moduleContent'>
+									<div class='cubeNavigationArea cubeNavigationArea2' value='2' id='cubeNavigation306'>
+										<div class='cubeLink cubeLink1 ' >
+											<a class='cubeLink_a ' href='#'  target='_self' id='cubeLink_a1_cubeNav306' >
+												<div class='cubeLink_bg'></div>
+												<div class='cubeLink_curtain'></div>
+												<div class='cubeLink_ico icon-cube iconfont '></div>
+												<div class='cubeLink_text g_link'>
+													<div class='cubeLink_text_p '>走进新区<p class='cubeLink_subText_p'></p>
+													</div>
+												</div>
+											</a>
+										</div>          <!-- loop here -->
+										<div class='cubeLink cubeLink2 ' >
+											<a class='cubeLink_a ' href='#'  target='_self'  >
+												<div class='cubeLink_bg'></div>
+												<div class='cubeLink_curtain'></div>
+												<div class='cubeLink_ico icon-cube iconfont '></div>
+												<div class='cubeLink_text g_link'>
+													<div class='cubeLink_text_p '>新闻中心<p class='cubeLink_subText_p'></p>
+													</div>
+												</div>
+											</a>
+										</div>          <!-- loop here -->
+										<div class='cubeLink cubeLink3 ' >
+											<a class='cubeLink_a ' href='#'  target='_self'  >
+												<div class='cubeLink_bg'></div>
+												<div class='cubeLink_curtain'></div>
+												<div class='cubeLink_ico icon-cube iconfont '></div>
+												<div class='cubeLink_text g_link'>
+													<div class='cubeLink_text_p '>产业发展<p class='cubeLink_subText_p'></p>
+													</div>
+												</div>
+											</a>
+										</div>          <!-- loop here -->
+										<div class='cubeLink cubeLink4 ' >
+											<a class='cubeLink_a ' href='#'  target='_self'  >
+												<div class='cubeLink_bg'></div>
+												<div class='cubeLink_curtain'></div>
+												<div class='cubeLink_ico icon-cube iconfont '></div>
+												<div class='cubeLink_text g_link'>
+													<div class='cubeLink_text_p '>绿色新区<p class='cubeLink_subText_p'></p>
+													</div>
+												</div>
+											</a>
+										</div>          <!-- loop here -->
+										<div class='cubeLink cubeLink5 ' >
+											<a class='cubeLink_a ' href='#'  target='_self'  >
+												<div class='cubeLink_bg'></div>
+												<div class='cubeLink_curtain'></div>
+												<div class='cubeLink_ico icon-cube iconfont '></div>
+												<div class='cubeLink_text g_link'>
+													<div class='cubeLink_text_p '>政务发展<p class='cubeLink_subText_p'></p>
+													</div>
+												</div>
+											</a>
+										</div>          <!-- loop here -->
+										<div class='cubeLink cubeLink6 ' >
+											<a class='cubeLink_a ' href='#'  target='_self'  >
+												<div class='cubeLink_bg'></div>
+												<div class='cubeLink_curtain'></div>
+												<div class='cubeLink_ico icon-cube iconfont '></div>
+												<div class='cubeLink_text g_link'>
+													<div class='cubeLink_text_p '>联系我们<p class='cubeLink_subText_p'></p>
+													</div>
+												</div>
+											</a>
+										</div>          <!-- loop here -->
+									</div>
+								</div>
+							</div>
+
+						</div>
+					</div>
+
+
+				</div>
+			</div>
+			</div>
+		</div>
 
 		<div class="box" data-title="iconGroup04" data-type="iconGroup">
 			<div class="iconGroup04 clear" data-type="button">
